# libelf

./: CMakeLists.txt
include/: libelf.h  nlist.h
src/: CMakeLists.txt  common.h  config.h  elf32_checksum.c  elf32_updatefile.c  elf32_xlatetof.c  elf_begin.c  elf_end.c  elf_getarsym.c  elf_update.c  eu-config.h  libelfP.h  system.h
src/win32/: port.c
